test_regress/t/t_debug_width.out
%Error: Internal Error: t/t_opt_const.v:142:26: ../V3Ast.cpp:#: widthMismatch detected 'lhsp()->widthMin() != rhsp()->widthMin()' @ ../V3AstNodes.cpp:#OUT:(G/wu32/5) LHS:(G/w32) RHS:(G/wu32/5)
  142 |   bug3182 i_bug3182(.in(d[4:0]), .out(bug3182_out));
      |                          ^
                        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
